bug squash at home

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -20,7 +20,7 @@ body {
     color: #f46524ff;
 }
 
-a.app-name:hover {
+a.app-name {
     color: #f46524ff !important;
 }
 
